Додана функція виключення світлофора

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 		<div class="light yellow"></div>
 		<div class="light green"></div>
 	</div>
+    <script src="app.js"></script>
 </body>
 </html>
