--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 	<div class="traffic-light">
 		<div class="light red"></div>
 		<div class="light yellow"></div>
-		<div class="light green"></div>
+		<div class="light green"></div>  
 	</div>
+    <br>
+    <button class="button button-off">Вимкнути</button>
+    <br>
+    <button class="button button-on">Увімкнути</button>
     <script src="app.js"></script>
 </body>
 </html>
